// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`account > Known bank - with specific provider transactions 1`] = `
{
  "amounts": {
    "diff": 6600,
    "end": -2436527.04,
    "start": -2443127.04,
    "transactions": 3600,
  },
  "details": {
    "countTransactions": 5,
  },
  "footer": {
    "_1": "",
    "_2": "",
    "_3": "",
    "_4": "",
    "_5": "",
    "account_nb": "00410GXLT11",
    "bank_code": "18020",
    "currency_code": "EUR",
    "desk_code": "00001",
    "nb_of_dec": "2",
    "next_amount": "-2436527.04",
    "next_date": "2023-04-06",
    "record_code": "07",
  },
  "header": {
    "_1": "",
    "_2": "",
    "_3": "",
    "_4": "",
    "_5": "",
    "account_nb": "00410GXLT11",
    "bank_code": "18020",
    "currency_code": "EUR",
    "desk_code": "00001",
    "nb_of_dec": "2",
    "prev_amount": "-2443127.04",
    "prev_date": "2023-04-05",
    "record_code": "01",
  },
  "problems": [
    {
      "message": "Sum of transactions (3600) doesn't match with difference between start amount -2443127.04 and end amount -2436527.04",
    },
  ],
  "transactions": [
    {
      "323": "41 LEROY MERLIN FRANCE",
      "_1": "",
      "_2": "310",
      "_3": "0",
      "_4:": "000005",
      "_rank": "0",
      "account_nb": "00410GXLT11",
      "amount": "600",
      "bank_code": "18020",
      "currency_code": "EUR",
      "desk_code": "00001",
      "exempt_code": "",
      "internal_code": "5051",
      "label": "VIREMENT RECU  FACTURE N 806500",
      "nb_of_dec": "2",
      "operation_code": "05",
      "operation_date": "2023-04-06",
      "record_code": "04",
      "reference": "3142953",
      "reject_code": "",
      "value_date": "2023-03-31",
    },
    {
      "323": "32 LEROY MERLIN FRANCE",
      "_1": "",
      "_2": "310",
      "_3": "0",
      "_4:": "000005",
      "_rank": "1",
      "account_nb": "00410GXLT11",
      "amount": "1200",
      "bank_code": "18020",
      "currency_code": "EUR",
      "desk_code": "00001",
      "exempt_code": "",
      "internal_code": "5051",
      "label": "VIREMENT RECU  FACTURE N 806448",
      "nb_of_dec": "2",
      "operation_code": "05",
      "operation_date": "2023-04-06",
      "record_code": "04",
      "reference": "3142951",
      "reject_code": "",
      "value_date": "2023-03-31",
    },
    {
      "323": "40 LEROY MERLIN FRANCE",
      "_1": "",
      "_2": "310",
      "_3": "0",
      "_4:": "000005",
      "_rank": "2",
      "account_nb": "00410GXLT11",
      "amount": "600",
      "bank_code": "18020",
      "currency_code": "EUR",
      "desk_code": "00001",
      "exempt_code": "",
      "internal_code": "5051",
      "label": "VIREMENT RECU  FACTURE N 806471",
      "nb_of_dec": "2",
      "operation_code": "05",
      "operation_date": "2023-04-06",
      "record_code": "04",
      "reference": "3142949",
      "reject_code": "",
      "value_date": "2023-03-31",
    },
    {
      "323": "62 LEROY MERLIN FRANCE",
      "_1": "",
      "_2": "310",
      "_3": "0",
      "_4:": "000005",
      "_rank": "3",
      "account_nb": "00410GXLT11",
      "amount": "600",
      "bank_code": "18020",
      "currency_code": "EUR",
      "desk_code": "00001",
      "exempt_code": "",
      "internal_code": "5051",
      "label": "VIREMENT RECU  FACTURE N 806472",
      "nb_of_dec": "2",
      "operation_code": "05",
      "operation_date": "2023-04-06",
      "record_code": "04",
      "reference": "3142948",
      "reject_code": "",
      "value_date": "2023-03-31",
    },
    {
      "323": "01 LEROY MERLIN FRANCE",
      "_1": "",
      "_2": "310",
      "_3": "0",
      "_4:": "000005",
      "_rank": "4",
      "account_nb": "00410GXLT11",
      "amount": "600",
      "bank_code": "18020",
      "currency_code": "EUR",
      "desk_code": "00001",
      "exempt_code": "",
      "internal_code": "5051",
      "label": "VIREMENT RECU  FACTURE N 806473",
      "nb_of_dec": "2",
      "operation_code": "05",
      "operation_date": "2023-04-06",
      "record_code": "04",
      "reference": "3142947",
      "reject_code": "",
      "value_date": "2023-03-31",
    },
  ],
}
`;

exports[`account > Known bank 1`] = `
{
  "amounts": {
    "diff": 1225.85,
    "end": 0,
    "start": -1225.85,
    "transactions": 1225.85,
  },
  "details": {
    "countTransactions": 11,
  },
  "footer": {
    "_1": "",
    "_2": "",
    "_3": "",
    "_4": "",
    "_5": "",
    "account_nb": "00410GXLT01",
    "bank_code": "18020",
    "currency_code": "EUR",
    "desk_code": "00001",
    "nb_of_dec": "2",
    "next_amount": "0",
    "next_date": "2023-04-07",
    "record_code": "07",
  },
  "header": {
    "_1": "",
    "_2": "",
    "_3": "",
    "_4": "",
    "_5": "",
    "account_nb": "00410GXLT01",
    "bank_code": "18020",
    "currency_code": "EUR",
    "desk_code": "00001",
    "nb_of_dec": "2",
    "prev_amount": "-1225.85",
    "prev_date": "2023-04-06",
    "record_code": "01",
  },
  "problems": null,
  "transactions": [
    {
      "423": "URN 5335098    VIREMENT N 53350",
      "_1": "",
      "_2": "050",
      "_3": "0",
      "_4:": "000070",
      "_rank": "0",
      "account_nb": "00410GXLT01",
      "amount": "-59436.32",
      "bank_code": "18020",
      "currency_code": "EUR",
      "desk_code": "00001",
      "exempt_code": "",
      "internal_code": "4041",
      "label": "VIREMENT BANCAIRE EN VOTRE FAVE",
      "nb_of_dec": "2",
      "operation_code": "21",
      "operation_date": "2023-04-07",
      "record_code": "04",
      "reference": "3175387",
      "reject_code": "",
      "value_date": "2023-04-05",
    },
    {
      "423": "INANCEMENT   VIREMENT N 5335098",
      "_1": "",
      "_2": "050",
      "_3": "0",
      "_4:": "000002",
      "_rank": "1",
      "account_nb": "00410GXLT01",
      "amount": "-142.97",
      "bank_code": "18020",
      "currency_code": "EUR",
      "desk_code": "00001",
      "exempt_code": "",
      "internal_code": "3126",
      "label": "TVA SUR PRECOMPTE DE COMM. DE F",
      "nb_of_dec": "2",
      "operation_code": "67",
      "operation_date": "2023-04-07",
      "record_code": "04",
      "reference": "3175387",
      "reject_code": "",
      "value_date": "2023-04-05",
    },
    {
      "423": "NT   VIREMENT N 5335098",
      "_1": "",
      "_2": "050",
      "_3": "0",
      "_4:": "000001",
      "_rank": "2",
      "account_nb": "00410GXLT01",
      "amount": "-714.85",
      "bank_code": "18020",
      "currency_code": "EUR",
      "desk_code": "00001",
      "exempt_code": "",
      "internal_code": "3026",
      "label": "PRECOMPTE DE COMM. DE FINANCEME",
      "nb_of_dec": "2",
      "operation_code": "61",
      "operation_date": "2023-04-07",
      "record_code": "04",
      "reference": "3175387",
      "reject_code": "",
      "value_date": "2023-04-05",
    },
    {
      "423": "MISE N 2740649",
      "_1": "",
      "_2": "070",
      "_3": "0",
      "_4:": "000073",
      "_rank": "3",
      "account_nb": "00410GXLT01",
      "amount": "-5925.37",
      "bank_code": "18020",
      "currency_code": "EUR",
      "desk_code": "00001",
      "exempt_code": "",
      "internal_code": "6081",
      "label": "PRELEVEMENT DE FG 10.00P SUR RE",
      "nb_of_dec": "2",
      "operation_code": "91",
      "operation_date": "2023-04-07",
      "record_code": "04",
      "reference": "3173891",
      "reject_code": "",
      "value_date": "2023-04-07",
    },
    {
      "423": "SUR REMISE N 2740649",
      "_1": "",
      "_2": "070",
      "_3": "0",
      "_4:": "000017",
      "_rank": "4",
      "account_nb": "00410GXLT01",
      "amount": "-2370.15",
      "bank_code": "18020",
      "currency_code": "EUR",
      "desk_code": "00001",
      "exempt_code": "",
      "internal_code": "6083",
      "label": "PRELEVEMENT DE FONDS DE RESERVE",
      "nb_of_dec": "2",
      "operation_code": "91",
      "operation_date": "2023-04-07",
      "record_code": "04",
      "reference": "3173891",
      "reject_code": "",
      "value_date": "2023-04-07",
    },
    {
      "423": "E SUR REMISE N 2740649",
      "_1": "",
      "_2": "070",
      "_3": "0",
      "_4:": "000003",
      "_rank": "5",
      "account_nb": "00410GXLT01",
      "amount": "-27.36",
      "bank_code": "18020",
      "currency_code": "EUR",
      "desk_code": "00001",
      "exempt_code": "",
      "internal_code": "3031",
      "label": "TVA SUR COMMISSION D AFFACTURAG",
      "nb_of_dec": "2",
      "operation_code": "67",
      "operation_date": "2023-04-07",
      "record_code": "04",
      "reference": "3173891",
      "reject_code": "",
      "value_date": "2023-04-07",
    },
    {
      "423": "MISE N 2740649",
      "_1": "",
      "_2": "070",
      "_3": "0",
      "_4:": "000002",
      "_rank": "6",
      "account_nb": "00410GXLT01",
      "amount": "-136.79",
      "bank_code": "18020",
      "currency_code": "EUR",
      "desk_code": "00001",
      "exempt_code": "",
      "internal_code": "3021",
      "label": "COMMISSION D AFFACTURAGE SUR RE",
      "nb_of_dec": "2",
      "operation_code": "65",
      "operation_date": "2023-04-07",
      "record_code": "04",
      "reference": "3173891",
      "reject_code": "",
      "value_date": "2023-04-07",
    },
    {
      "423": "E N 2740649",
      "_1": "",
      "_2": "070",
      "_3": "0",
      "_4:": "000001",
      "_rank": "7",
      "account_nb": "00410GXLT01",
      "amount": "91185.77",
      "bank_code": "18020",
      "currency_code": "EUR",
      "desk_code": "00001",
      "exempt_code": "",
      "internal_code": "1001",
      "label": "ACHAT REMISE DE FACTURES  REMIS",
      "nb_of_dec": "2",
      "operation_code": "91",
      "operation_date": "2023-04-07",
      "record_code": "04",
      "reference": "3173891",
      "reject_code": "",
      "value_date": "2023-04-07",
    },
    {
      "423": "AVOIRS   REMISE N 2740651",
      "_1": "",
      "_2": "070",
      "_3": "0",
      "_4:": "000003",
      "_rank": "8",
      "account_nb": "00410GXLT01",
      "amount": "-6.35",
      "bank_code": "18020",
      "currency_code": "EUR",
      "desk_code": "00001",
      "exempt_code": "",
      "internal_code": "3122",
      "label": "TVA SUR COMMISSION SUR REMISE D",
      "nb_of_dec": "2",
      "operation_code": "67",
      "operation_date": "2023-04-07",
      "record_code": "04",
      "reference": "3173163",
      "reject_code": "",
      "value_date": "2023-04-07",
    },
    {
      "423": "REMISE N 2740651",
      "_1": "",
      "_2": "070",
      "_3": "0",
      "_4:": "000002",
      "_rank": "9",
      "account_nb": "00410GXLT01",
      "amount": "-31.75",
      "bank_code": "18020",
      "currency_code": "EUR",
      "desk_code": "00001",
      "exempt_code": "",
      "internal_code": "3022",
      "label": "COMMISSION SUR REMISE D AVOIRS",
      "nb_of_dec": "2",
      "operation_code": "65",
      "operation_date": "2023-04-07",
      "record_code": "04",
      "reference": "3173163",
      "reject_code": "",
      "value_date": "2023-04-07",
    },
    {
      "423": "2740651",
      "_1": "",
      "_2": "070",
      "_3": "0",
      "_4:": "000001",
      "_rank": "10",
      "account_nb": "00410GXLT01",
      "amount": "-21168.01",
      "bank_code": "18020",
      "currency_code": "EUR",
      "desk_code": "00001",
      "exempt_code": "",
      "internal_code": "1002",
      "label": "ACHAT REMISE D AVOIRS  REMISE N",
      "nb_of_dec": "2",
      "operation_code": "91",
      "operation_date": "2023-04-07",
      "record_code": "04",
      "reference": "3173163",
      "reject_code": "",
      "value_date": "2023-04-07",
    },
  ],
}
`;

exports[`account > Known bank 2 1`] = `
{
  "amounts": {
    "diff": 77317.88,
    "end": 0,
    "start": 77317.88,
    "transactions": 77317.88,
  },
  "details": {
    "countTransactions": 3,
  },
  "footer": {
    "_1": "",
    "_2": "",
    "_3": "",
    "_4": "",
    "_5": "",
    "account_nb": "00410GXLT01",
    "bank_code": "18020",
    "currency_code": "EUR",
    "desk_code": "00001",
    "nb_of_dec": "2",
    "next_amount": "0",
    "next_date": "2023-03-06",
    "record_code": "07",
  },
  "header": {
    "_1": "",
    "_2": "",
    "_3": "",
    "_4": "",
    "_5": "",
    "account_nb": "00410GXLT01",
    "bank_code": "18020",
    "currency_code": "EUR",
    "desk_code": "00001",
    "nb_of_dec": "2",
    "prev_amount": "77317.88",
    "prev_date": "2023-03-03",
    "record_code": "01",
  },
  "problems": null,
  "transactions": [
    {
      "323": "URN 5295341    VIREMENT N 52953",
      "_1": "",
      "_2": "040",
      "_3": "0",
      "_4:": "000070",
      "_rank": "0",
      "account_nb": "00410GXLT01",
      "amount": "-77108.32",
      "bank_code": "18020",
      "currency_code": "EUR",
      "desk_code": "00001",
      "exempt_code": "",
      "internal_code": "4041",
      "label": "VIREMENT BANCAIRE EN VOTRE FAVE",
      "nb_of_dec": "2",
      "operation_code": "21",
      "operation_date": "2023-03-06",
      "record_code": "04",
      "reference": "2059801",
      "reject_code": "",
      "value_date": "2023-03-04",
    },
    {
      "323": "INANCEMENT   VIREMENT N 5295341",
      "_1": "",
      "_2": "040",
      "_3": "0",
      "_4:": "000002",
      "_rank": "1",
      "account_nb": "00410GXLT01",
      "amount": "-34.93",
      "bank_code": "18020",
      "currency_code": "EUR",
      "desk_code": "00001",
      "exempt_code": "",
      "internal_code": "3126",
      "label": "TVA SUR PRECOMPTE DE COMM. DE F",
      "nb_of_dec": "2",
      "operation_code": "67",
      "operation_date": "2023-03-06",
      "record_code": "04",
      "reference": "2059801",
      "reject_code": "",
      "value_date": "2023-03-04",
    },
    {
      "323": "NT   VIREMENT N 5295341",
      "_1": "",
      "_2": "040",
      "_3": "0",
      "_4:": "000001",
      "_rank": "2",
      "account_nb": "00410GXLT01",
      "amount": "-174.63",
      "bank_code": "18020",
      "currency_code": "EUR",
      "desk_code": "00001",
      "exempt_code": "",
      "internal_code": "3026",
      "label": "PRECOMPTE DE COMM. DE FINANCEME",
      "nb_of_dec": "2",
      "operation_code": "61",
      "operation_date": "2023-03-06",
      "record_code": "04",
      "reference": "2059801",
      "reject_code": "",
      "value_date": "2023-03-04",
    },
  ],
}
`;

exports[`account > Known bank 3 - no transactions 1`] = `
{
  "amounts": {
    "diff": 0,
    "end": 0,
    "start": 0,
    "transactions": 0,
  },
  "details": {
    "countTransactions": 0,
  },
  "footer": {
    "_1": "",
    "_2": "",
    "_3": "",
    "_4": "",
    "_5": "",
    "account_nb": "00410GXLT01",
    "bank_code": "18020",
    "currency_code": "EUR",
    "desk_code": "00001",
    "nb_of_dec": "2",
    "next_amount": "0",
    "next_date": "2023-03-22",
    "record_code": "07",
  },
  "header": {
    "_1": "",
    "_2": "",
    "_3": "",
    "_4": "",
    "_5": "",
    "account_nb": "00410GXLT01",
    "bank_code": "18020",
    "currency_code": "EUR",
    "desk_code": "00001",
    "nb_of_dec": "2",
    "prev_amount": "0",
    "prev_date": "2023-03-21",
    "record_code": "01",
  },
  "problems": null,
  "transactions": [],
}
`;

exports[`account > Known bank 4 - no transactions 1`] = `
{
  "amounts": {
    "diff": 0,
    "end": -1996637.14,
    "start": -1996637.14,
    "transactions": 0,
  },
  "details": {
    "countTransactions": 0,
  },
  "footer": {
    "_1": "",
    "_2": "",
    "_3": "",
    "_4": "",
    "_5": "",
    "account_nb": "00410GXLT11",
    "bank_code": "18020",
    "currency_code": "EUR",
    "desk_code": "00001",
    "nb_of_dec": "2",
    "next_amount": "-1996637.14",
    "next_date": "2023-03-22",
    "record_code": "07",
  },
  "header": {
    "_1": "",
    "_2": "",
    "_3": "",
    "_4": "",
    "_5": "",
    "account_nb": "00410GXLT11",
    "bank_code": "18020",
    "currency_code": "EUR",
    "desk_code": "00001",
    "nb_of_dec": "2",
    "prev_amount": "-1996637.14",
    "prev_date": "2023-03-21",
    "record_code": "01",
  },
  "problems": null,
  "transactions": [],
}
`;

exports[`account > Sobank 1`] = `
{
  "amounts": {
    "diff": 252,
    "end": 352484.45,
    "start": 352232.45,
    "transactions": 252,
  },
  "details": {
    "countTransactions": 1,
  },
  "footer": {
    "_1": "",
    "_2": "",
    "_3": "",
    "_4": "",
    "_5": "",
    "account_nb": "00020828502",
    "bank_code": "10278",
    "currency_code": "EUR",
    "desk_code": "06186",
    "nb_of_dec": "2",
    "next_amount": "352484.45",
    "next_date": "2023-03-06",
    "record_code": "07",
  },
  "header": {
    "_1": "",
    "_2": "",
    "_3": "",
    "_4": "",
    "_5": "030323060323",
    "account_nb": "00020828502",
    "bank_code": "10278",
    "currency_code": "EUR",
    "desk_code": "06186",
    "nb_of_dec": "2",
    "prev_amount": "352232.45",
    "prev_date": "2023-03-03",
    "record_code": "01",
  },
  "problems": null,
  "transactions": [
    {
      "NOM": "SAS  TACOS                         O Reilly IT",
      "_1": "",
      "_2": "",
      "_3": "0",
      "_4:": "",
      "_rank": "0",
      "account_nb": "00020828502",
      "amount": "252",
      "bank_code": "10278",
      "creditor_account": "FR7610278061860002082850258",
      "creditor_name": "O Reilly IT",
      "currency_code": "EUR",
      "debtor_name": "SAS  TACOS",
      "desk_code": "06186",
      "end2end_identification": "REMB TROP PERCUE FACT SEPT",
      "exempt_code": "",
      "instruction_id": "",
      "internal_code": "9305",
      "label": "VIR SAS  TACOS",
      "label_1": "REMB TROP PERCUE FACT SEPT",
      "nb_of_dec": "2",
      "operation_code": "18",
      "operation_date": "2023-03-06",
      "payment_infor_id": "REMBOUR",
      "purpose": "",
      "record_code": "04",
      "reference": "0000000",
      "reject_code": "",
      "remittance_information_1": "REMB TROP PERCUE FACT SEPT",
      "value_date": "2023-03-06",
    },
  ],
}
`;

exports[`account > Sobank 1 1`] = `
{
  "amounts": {
    "diff": 56.16,
    "end": 23462.42,
    "start": 23518.58,
    "transactions": 56.16,
  },
  "details": {
    "countTransactions": 1,
  },
  "footer": {
    "_1": "",
    "_2": "",
    "_3": "",
    "_4": "",
    "_5": "",
    "account_nb": "32418565371",
    "bank_code": "10207",
    "currency_code": "EUR",
    "desk_code": "00233",
    "nb_of_dec": "2",
    "next_amount": "23462.42",
    "next_date": "2023-03-07",
    "record_code": "07",
  },
  "header": {
    "_1": "",
    "_2": "",
    "_3": "",
    "_4": "",
    "_5": "",
    "account_nb": "32418565371",
    "bank_code": "10207",
    "currency_code": "EUR",
    "desk_code": "00233",
    "nb_of_dec": "2",
    "prev_amount": "23518.58",
    "prev_date": "2023-03-06",
    "record_code": "01",
  },
  "problems": null,
  "transactions": [
    {
      "_1": "E",
      "_2": "",
      "_3": "0",
      "_4:": "APPS COMMERCE",
      "_rank": "0",
      "account_nb": "32418565371",
      "amount": "-56.16",
      "bank_code": "10207",
      "currency_code": "EUR",
      "desk_code": "00233",
      "exempt_code": "1",
      "internal_code": "0537",
      "label": "EUROPRELEVEMENT",
      "label_1": "APPS COMMERCE PICKR.FR GG10340DH",
      "label_2": "71626833",
      "label_3": "PRLV SEPA GOOGLE CLOUD F",
      "nb_of_dec": "2",
      "operation_code": "08",
      "operation_date": "2023-03-07",
      "record_code": "04",
      "reference": "01P71OB",
      "reject_code": "",
      "value_date": "2023-03-07",
    },
  ],
}
`;

exports[`account > Sobank 2 - no transactions 1`] = `
{
  "amounts": {
    "diff": 0,
    "end": 23518.58,
    "start": 23518.58,
    "transactions": 0,
  },
  "details": {
    "countTransactions": 0,
  },
  "footer": {
    "_1": "",
    "_2": "",
    "_3": "",
    "_4": "",
    "_5": "",
    "account_nb": "24218653792",
    "bank_code": "10207",
    "currency_code": "EUR",
    "desk_code": "00233",
    "nb_of_dec": "2",
    "next_amount": "23518.58",
    "next_date": "2023-03-06",
    "record_code": "07",
  },
  "header": {
    "_1": "",
    "_2": "",
    "_3": "",
    "_4": "",
    "_5": "",
    "account_nb": "24218653792",
    "bank_code": "10207",
    "currency_code": "EUR",
    "desk_code": "00233",
    "nb_of_dec": "2",
    "prev_amount": "23518.58",
    "prev_date": "2023-03-03",
    "record_code": "01",
  },
  "problems": null,
  "transactions": [],
}
`;

exports[`account > Sobank 3 - should find internal code from transaction body 1`] = `
{
  "amounts": {
    "diff": 303.94,
    "end": 252473.05,
    "start": 252776.99,
    "transactions": 303.94,
  },
  "details": {
    "countTransactions": 1,
  },
  "footer": {
    "_1": "",
    "_2": "",
    "_3": "",
    "_4": "",
    "_5": "",
    "account_nb": "00023107391",
    "bank_code": "10279",
    "currency_code": "EUR",
    "desk_code": "01084",
    "nb_of_dec": "2",
    "next_amount": "252473.05",
    "next_date": "2024-04-11",
    "record_code": "07",
  },
  "header": {
    "_1": "",
    "_2": "",
    "_3": "",
    "_4": "",
    "_5": "080324120324",
    "account_nb": "00023107391",
    "bank_code": "10279",
    "currency_code": "EUR",
    "desk_code": "01084",
    "nb_of_dec": "2",
    "prev_amount": "252776.99",
    "prev_date": "2024-04-08",
    "record_code": "01",
  },
  "problems": null,
  "transactions": [
    {
      "_1": "",
      "_2": "",
      "_3": "0",
      "_4:": "",
      "_rank": "0",
      "account_nb": "00023107391",
      "amount": "-303.94",
      "bank_code": "10279",
      "currency_code": "EUR",
      "desk_code": "01084",
      "exempt_code": "0",
      "internal_code": "9162",
      "label": "PRLV SEPA Kreiger - Inc MARKETI",
      "label_1": "/INV/F4813768/0086247287 //2023",
      "nb_of_dec": "2",
      "operation_code": "B1",
      "operation_date": "2024-04-11",
      "record_code": "04",
      "reference": "0000010",
      "reject_code": "",
      "value_date": "2024-03-11",
    },
  ],
}
`;

exports[`account > Somewhere unknown example - no transactions 1`] = `
{
  "amounts": {
    "diff": 0,
    "end": -847.47,
    "start": -847.47,
    "transactions": 0,
  },
  "details": {
    "countTransactions": 0,
  },
  "footer": {
    "_1": "",
    "_2": "",
    "_3": "",
    "_4": "",
    "_5": "",
    "account_nb": "09170295947",
    "bank_code": "30056",
    "currency_code": "EUR",
    "desk_code": "00917",
    "nb_of_dec": "2",
    "next_amount": "-847.47",
    "next_date": "2021-09-07",
    "record_code": "07",
  },
  "header": {
    "_1": "",
    "_2": "",
    "_3": "",
    "_4": "",
    "_5": "",
    "account_nb": "09170295947",
    "bank_code": "30056",
    "currency_code": "EUR",
    "desk_code": "00917",
    "nb_of_dec": "2",
    "prev_amount": "-847.47",
    "prev_date": "2021-09-06",
    "record_code": "01",
  },
  "problems": null,
  "transactions": [],
}
`;

exports[`account > Sycomore - no transactions 1`] = `
{
  "amounts": {
    "diff": 0,
    "end": 344569.19,
    "start": 344569.19,
    "transactions": 0,
  },
  "details": {
    "countTransactions": 0,
  },
  "footer": {
    "_1": "",
    "_2": "",
    "_3": "",
    "_4": "",
    "_5": "",
    "account_nb": "00010139479",
    "bank_code": "30012",
    "currency_code": "EUR",
    "desk_code": "00071",
    "nb_of_dec": "2",
    "next_amount": "344569.19",
    "next_date": "2023-03-29",
    "record_code": "07",
  },
  "header": {
    "_1": "",
    "_2": "",
    "_3": "",
    "_4": "",
    "_5": "",
    "account_nb": "00010139479",
    "bank_code": "30012",
    "currency_code": "EUR",
    "desk_code": "00071",
    "nb_of_dec": "2",
    "prev_amount": "344569.19",
    "prev_date": "2023-03-28",
    "record_code": "01",
  },
  "problems": null,
  "transactions": [],
}
`;

exports[`account > Sycomore 2 - no transactions 1`] = `
{
  "amounts": {
    "diff": 0,
    "end": -865.36,
    "start": -865.36,
    "transactions": 0,
  },
  "details": {
    "countTransactions": 0,
  },
  "footer": {
    "_1": "",
    "_2": "",
    "_3": "",
    "_4": "",
    "_5": "",
    "account_nb": "00010738652",
    "bank_code": "30012",
    "currency_code": "EUR",
    "desk_code": "00823",
    "nb_of_dec": "2",
    "next_amount": "-865.36",
    "next_date": "2023-03-29",
    "record_code": "07",
  },
  "header": {
    "_1": "",
    "_2": "",
    "_3": "",
    "_4": "",
    "_5": "",
    "account_nb": "00010738652",
    "bank_code": "30012",
    "currency_code": "EUR",
    "desk_code": "00823",
    "nb_of_dec": "2",
    "prev_amount": "-865.36",
    "prev_date": "2023-03-28",
    "record_code": "01",
  },
  "problems": null,
  "transactions": [],
}
`;

exports[`account > Sycomore 3 1`] = `
{
  "amounts": {
    "diff": 20144,
    "end": 636338.79,
    "start": 656482.79,
    "transactions": 20144,
  },
  "details": {
    "countTransactions": 2,
  },
  "footer": {
    "_1": "",
    "_2": "",
    "_3": "",
    "_4": "",
    "_5": "",
    "account_nb": "00010156142",
    "bank_code": "30012",
    "currency_code": "EUR",
    "desk_code": "00585",
    "nb_of_dec": "2",
    "next_amount": "636338.79",
    "next_date": "2023-03-29",
    "record_code": "07",
  },
  "header": {
    "_1": "",
    "_2": "",
    "_3": "",
    "_4": "",
    "_5": "",
    "account_nb": "00010156142",
    "bank_code": "30012",
    "currency_code": "EUR",
    "desk_code": "00585",
    "nb_of_dec": "2",
    "prev_amount": "656482.79",
    "prev_date": "2023-03-28",
    "record_code": "01",
  },
  "problems": null,
  "transactions": [
    {
      "PDO": "FR FRANCE",
      "_1": "",
      "_2": "",
      "_3": "",
      "_4:": "",
      "_rank": "0",
      "account_nb": "00010156142",
      "amount": "35919",
      "bank_code": "30012",
      "currency_code": "EUR",
      "debtor_name": "DOMUSVI",
      "desk_code": "00585",
      "end2end_identification": "NOTPROVIDED",
      "exempt_code": "",
      "internal_code": "0568",
      "label": "DOMUSVI",
      "nb_of_dec": "2",
      "operation_code": "18",
      "operation_date": "2023-03-29",
      "purpose": "",
      "record_code": "04",
      "reference": "0000000",
      "reject_code": "",
      "remittance_information_1": "/INV/3867 8.2.2023",
      "value_date": "2023-03-29",
    },
    {
      "_1": "",
      "_2": "",
      "_3": "",
      "_4:": "FR46ZZZ005002",
      "_rank": "1",
      "account_nb": "00010156142",
      "amount": "-56063",
      "bank_code": "30012",
      "creditor_id": "FR46ZZZ005002",
      "creditor_id_type": "",
      "creditor_name": "DGFIP IMPOT",
      "currency_code": "EUR",
      "desk_code": "00585",
      "end2end_identification": "220750510700113748308",
      "exempt_code": "0",
      "internal_code": "0818",
      "label": "PRLV SEPA/DGFIP IMPOT",
      "mandate_identification": "NN804148211DGFIP2019921505K41FN7QQ",
      "nb_of_dec": "2",
      "operation_code": "B2",
      "operation_date": "2023-03-29",
      "purpose": "",
      "record_code": "04",
      "reference": "",
      "reject_code": "",
      "remittance_information_1": "TVA-032023-3310CA3",
      "sequence_type": "",
      "value_date": "2023-03-29",
    },
  ],
}
`;

exports[`account > Sycomore 4 1`] = `
{
  "amounts": {
    "diff": 0,
    "end": 47289.83,
    "start": 47289.83,
    "transactions": 0,
  },
  "details": {
    "countTransactions": 3,
  },
  "footer": {
    "_1": "",
    "_2": "",
    "_3": "",
    "_4": "",
    "_5": "",
    "account_nb": "00020086644",
    "bank_code": "30003",
    "currency_code": "EUR",
    "desk_code": "01678",
    "nb_of_dec": "2",
    "next_amount": "47289.83",
    "next_date": "2023-04-17",
    "record_code": "07",
  },
  "header": {
    "_1": "",
    "_2": "",
    "_3": "",
    "_4": "",
    "_5": "",
    "account_nb": "00020086644",
    "bank_code": "30003",
    "currency_code": "EUR",
    "desk_code": "01678",
    "nb_of_dec": "2",
    "prev_amount": "47289.83",
    "prev_date": "2023-04-14",
    "record_code": "01",
  },
  "problems": null,
  "transactions": [
    {
      "_1": "",
      "_2": "",
      "_3": "",
      "_4:": "",
      "_rank": "0",
      "account_nb": "00020086644",
      "amount": "180000",
      "bank_code": "30003",
      "currency_code": "EUR",
      "desk_code": "01678",
      "exempt_code": "0",
      "internal_code": "7150",
      "label": "CAT N  01678E2347600041",
      "label_1": "ECHU LE 17-04-2023",
      "nb_of_dec": "2",
      "operation_code": "77",
      "operation_date": "2023-04-17",
      "record_code": "04",
      "reference": "0000000",
      "reject_code": "00",
      "value_date": "2023-04-17",
    },
    {
      "_1": "",
      "_2": "",
      "_3": "",
      "_4:": "",
      "_rank": "1",
      "account_nb": "00020086644",
      "amount": "428.05",
      "bank_code": "30003",
      "currency_code": "EUR",
      "desk_code": "01678",
      "exempt_code": "0",
      "internal_code": "7150",
      "label": "INTERETS CREDITEURS SUR CAT",
      "label_1": "N 01678E2347600041",
      "label_2": "PERIODE DU 17/03/23 AU 17/04/23",
      "nb_of_dec": "2",
      "operation_code": "77",
      "operation_date": "2023-04-17",
      "record_code": "04",
      "reference": "0000000",
      "reject_code": "00",
      "value_date": "2023-04-17",
    },
    {
      "_1": "",
      "_2": "",
      "_3": "",
      "_4:": "",
      "_rank": "2",
      "account_nb": "00020086644",
      "amount": "-180428.05",
      "bank_code": "30003",
      "currency_code": "EUR",
      "desk_code": "01678",
      "exempt_code": "1",
      "internal_code": "7150",
      "label": "OUVERTURE COMPTE A TERME N",
      "label_1": "01678E2350700167 ECH 17-05-2023",
      "nb_of_dec": "2",
      "operation_code": "76",
      "operation_date": "2023-04-17",
      "record_code": "04",
      "reference": "0000000",
      "reject_code": "00",
      "value_date": "2023-04-17",
    },
  ],
}
`;

exports[`account > Sycomore 5 1`] = `
{
  "amounts": {
    "diff": 641.19,
    "end": 220331.02,
    "start": 220972.21,
    "transactions": 641.19,
  },
  "details": {
    "countTransactions": 2,
  },
  "footer": {
    "_1": "",
    "_2": "",
    "_3": "",
    "_4": "",
    "_5": "C",
    "account_nb": "00020547711",
    "bank_code": "30003",
    "currency_code": "EUR",
    "desk_code": "03300",
    "nb_of_dec": "2",
    "next_amount": "220331.02",
    "next_date": "2023-04-17",
    "record_code": "07",
  },
  "header": {
    "_1": "",
    "_2": "",
    "_3": "",
    "_4": "",
    "_5": "",
    "account_nb": "00020547711",
    "bank_code": "30003",
    "currency_code": "EUR",
    "desk_code": "03300",
    "nb_of_dec": "2",
    "prev_amount": "220972.21",
    "prev_date": "2023-04-14",
    "record_code": "01",
  },
  "problems": null,
  "transactions": [
    {
      "_1": "",
      "_2": "",
      "_3": "",
      "_4:": "FRAIS VIR I",
      "_rank": "0",
      "account_nb": "00020547711",
      "amount": "-37",
      "bank_code": "30003",
      "currency_code": "EUR",
      "desk_code": "03300",
      "exempt_code": "1",
      "internal_code": "7400",
      "label": "NTL RECU        360430885258",
      "label_1": "REF 360430885258",
      "label_2": "1 VIREMENT(S)          POUR  19 00",
      "label_3": "1 COMMISSION DE CHANGE POUR 18 00",
      "nb_of_dec": "2",
      "operation_code": "62",
      "operation_date": "2023-04-17",
      "record_code": "04",
      "reference": "1048597",
      "reject_code": "00",
      "value_date": "2023-04-17",
    },
    {
      "_1": "",
      "_2": "",
      "_3": "",
      "_4:": "1405049884",
      "_rank": "1",
      "account_nb": "00020547711",
      "amount": "-604.19",
      "bank_code": "30003",
      "creditor_id": "FR17ZZZ452888",
      "creditor_id_type": "",
      "creditor_name": "METRO CASH CARRY FRANCE-METRO FRANCE",
      "currency_code": "EUR",
      "desk_code": "03300",
      "end2end_identification": "0109694881",
      "exempt_code": "0",
      "internal_code": "4320",
      "label": "PRELEVEMENT  METRO CASH CARRY F",
      "mandate_identification": "CMR000074241101",
      "nb_of_dec": "2",
      "operation_code": "B1",
      "operation_date": "2023-04-17",
      "purpose": "",
      "record_code": "04",
      "reference": "5049884",
      "reject_code": "00",
      "remittance_information_1": "PRELEVEMENT",
      "sequence_type": "",
      "value_date": "2023-04-17",
    },
  ],
}
`;

exports[`account > Sycomore 6 1`] = `
{
  "amounts": {
    "diff": 34896.72,
    "end": 367661.59,
    "start": 332764.87,
    "transactions": 6656.72,
  },
  "details": {
    "countTransactions": 7,
  },
  "footer": {
    "_1": "",
    "_2": "",
    "_3": "",
    "_4": "",
    "_5": "",
    "account_nb": "00010139479",
    "bank_code": "30012",
    "currency_code": "EUR",
    "desk_code": "00071",
    "nb_of_dec": "2",
    "next_amount": "367661.59",
    "next_date": "2023-04-14",
    "record_code": "07",
  },
  "header": {
    "_1": "",
    "_2": "",
    "_3": "",
    "_4": "",
    "_5": "",
    "account_nb": "00010139479",
    "bank_code": "30012",
    "currency_code": "EUR",
    "desk_code": "00071",
    "nb_of_dec": "2",
    "prev_amount": "332764.87",
    "prev_date": "2023-04-13",
    "record_code": "01",
  },
  "problems": [
    {
      "message": "Sum of transactions (6656.72) doesn't match with difference between start amount 332764.87 and end amount 367661.59",
    },
  ],
  "transactions": [
    {
      "_1": "",
      "_2": "",
      "_3": "",
      "_4:": "4974XXXXXXXX0507",
      "_rank": "0",
      "account_nb": "00010139479",
      "amount": "-94.5",
      "bank_code": "30012",
      "currency_code": "EUR",
      "desk_code": "00071",
      "exempt_code": "0",
      "internal_code": "0083",
      "label": "DU 140423 INFOMANIAK.COM CARTE",
      "label_1": "CHE 94 50EUR",
      "nb_of_dec": "2",
      "operation_code": "28",
      "operation_date": "2023-04-14",
      "record_code": "04",
      "reference": "0000000",
      "reject_code": "",
      "value_date": "2023-04-14",
    },
    {
      "_1": "",
      "_2": "",
      "_3": "",
      "_4:": "FR18ZZZ531471",
      "_rank": "1",
      "account_nb": "00010139479",
      "amount": "-95.98",
      "bank_code": "30012",
      "creditor_id": "FR18ZZZ531471",
      "creditor_id_type": "",
      "creditor_name": "SOSH PRO",
      "currency_code": "EUR",
      "desk_code": "00071",
      "end2end_identification": "2652682",
      "exempt_code": "0",
      "internal_code": "0813",
      "label": "PRLV SEPA/SOSH PRO",
      "mandate_identification": "JNRUMVISAMUNDI000000020220916142704",
      "nb_of_dec": "2",
      "operation_code": "B1",
      "operation_date": "2023-04-14",
      "purpose": "",
      "record_code": "04",
      "reference": "",
      "reject_code": "",
      "remittance_information_1": "FACTURE SOSHPRO 02/04/2023 F202304025208",
      "sequence_type": "RCUR",
      "value_date": "2023-04-14",
    },
    {
      "_1": "",
      "_2": "",
      "_3": "",
      "_4:": "4974XXXXXXXX050",
      "_rank": "2",
      "account_nb": "00010139479",
      "amount": "-142.8",
      "bank_code": "30012",
      "currency_code": "EUR",
      "desk_code": "00071",
      "exempt_code": "0",
      "internal_code": "0083",
      "label": "DU 120423 BLS*MONDAY.COM1 CARTE",
      "label_1": "7 GBR 142 80EUR",
      "nb_of_dec": "2",
      "operation_code": "28",
      "operation_date": "2023-04-14",
      "record_code": "04",
      "reference": "0000000",
      "reject_code": "",
      "value_date": "2023-04-14",
    },
    {
      "_1": "",
      "_2": "",
      "_3": "",
      "_4:": "SCTINSTOUTU5KIEU",
      "_rank": "3",
      "account_nb": "00010139479",
      "amount": "330",
      "bank_code": "30012",
      "currency_code": "EUR",
      "debtor_name": "MIRAMUNDI",
      "desk_code": "00071",
      "end2end_identification": "SCTINSTOUTU5KIEUSARSWUR0X3HUXBG2",
      "exempt_code": "",
      "internal_code": "0563",
      "label": "MIRAMUNDI",
      "nb_of_dec": "2",
      "operation_code": "C2",
      "operation_date": "2023-04-14",
      "purpose": "",
      "record_code": "04",
      "reference": "0000000",
      "reject_code": "",
      "remittance_information_1": "F20220302-018",
      "value_date": "2023-04-14",
    },
    {
      "_1": "",
      "_2": "",
      "_3": "",
      "_4:": "SCTINSTOUTD7PBAP",
      "_rank": "4",
      "account_nb": "00010139479",
      "amount": "1800",
      "bank_code": "30012",
      "currency_code": "EUR",
      "debtor_name": "MIRAMUNDI",
      "desk_code": "00071",
      "end2end_identification": "SCTINSTOUTD7PBAPXBEPJ2JRBUWPCNW9",
      "exempt_code": "",
      "internal_code": "0563",
      "label": "MIRAMUNDI",
      "nb_of_dec": "2",
      "operation_code": "C2",
      "operation_date": "2023-04-14",
      "purpose": "",
      "record_code": "04",
      "reference": "0000000",
      "reject_code": "",
      "remittance_information_1": "TOP2022 / 3056617/1",
      "value_date": "2023-04-14",
    },
    {
      "_1": "",
      "_2": "",
      "_3": "",
      "_4:": "SCTINSTOUTLMQOIT",
      "_rank": "5",
      "account_nb": "00010139479",
      "amount": "2400",
      "bank_code": "30012",
      "currency_code": "EUR",
      "debtor_name": "MIRAMUNDI",
      "desk_code": "00071",
      "end2end_identification": "SCTINSTOUTLMQOITIMXOBTMJD441PR81",
      "exempt_code": "",
      "internal_code": "0563",
      "label": "MIRAMUNDI",
      "nb_of_dec": "2",
      "operation_code": "C2",
      "operation_date": "2023-04-14",
      "purpose": "",
      "record_code": "04",
      "reference": "0000000",
      "reject_code": "",
      "remittance_information_1": "120502",
      "value_date": "2023-04-14",
    },
    {
      "_1": "",
      "_2": "",
      "_3": "",
      "_4:": "SCTINSTOUTEWOGX0",
      "_rank": "6",
      "account_nb": "00010139479",
      "amount": "2460",
      "bank_code": "30012",
      "currency_code": "EUR",
      "debtor_name": "MIRAMUNDI",
      "desk_code": "00071",
      "end2end_identification": "SCTINSTOUTEWOGX0NUZGKKWAZFVNYIW9",
      "exempt_code": "",
      "internal_code": "0563",
      "label": "MIRAMUNDI",
      "nb_of_dec": "2",
      "operation_code": "C2",
      "operation_date": "2023-04-14",
      "purpose": "",
      "record_code": "04",
      "reference": "0000000",
      "reject_code": "",
      "remittance_information_1": "120602",
      "value_date": "2023-04-14",
    },
  ],
}
`;

exports[`account > Sycomore 7 - transaction without body 1`] = `
{
  "amounts": {
    "diff": 438.55,
    "end": 884606.98,
    "start": 885045.53,
    "transactions": 438.55,
  },
  "details": {
    "countTransactions": 1,
  },
  "footer": {
    "_1": "",
    "_2": "",
    "_3": "",
    "_4": "",
    "_5": "",
    "account_nb": "00010156142",
    "bank_code": "30012",
    "currency_code": "EUR",
    "desk_code": "00585",
    "nb_of_dec": "2",
    "next_amount": "884606.98",
    "next_date": "2023-04-14",
    "record_code": "07",
  },
  "header": {
    "_1": "",
    "_2": "",
    "_3": "",
    "_4": "",
    "_5": "",
    "account_nb": "00010156142",
    "bank_code": "30012",
    "currency_code": "EUR",
    "desk_code": "00585",
    "nb_of_dec": "2",
    "prev_amount": "885045.53",
    "prev_date": "2023-04-13",
    "record_code": "01",
  },
  "problems": null,
  "transactions": [
    {
      "_1": "",
      "_2": "",
      "_3": "",
      "_4:": "",
      "_rank": "0",
      "account_nb": "00010156142",
      "amount": "-438.55",
      "bank_code": "30012",
      "currency_code": "EUR",
      "desk_code": "00585",
      "exempt_code": "1",
      "internal_code": "0029",
      "label": "INTERETS ET COMMISSIONS",
      "nb_of_dec": "2",
      "operation_code": "70",
      "operation_date": "2023-04-14",
      "record_code": "04",
      "reference": "0000000",
      "reject_code": "",
      "value_date": "2023-04-01",
    },
  ],
}
`;

exports[`account > Sycomore 8 - transactions with some extra spaces in qualifier 1`] = `
{
  "amounts": {
    "diff": 8112.75,
    "end": 323360.23,
    "start": 315247.48,
    "transactions": 491.25,
  },
  "details": {
    "countTransactions": 5,
  },
  "footer": {
    "_1": "",
    "_2": "",
    "_3": "",
    "_4": "",
    "_5": "",
    "account_nb": "01124412726",
    "bank_code": "30012",
    "currency_code": "EUR",
    "desk_code": "00760",
    "nb_of_dec": "2",
    "next_amount": "323360.23",
    "next_date": "2023-04-14",
    "record_code": "07",
  },
  "header": {
    "_1": "",
    "_2": "",
    "_3": "",
    "_4": "",
    "_5": "",
    "account_nb": "01124412726",
    "bank_code": "30012",
    "currency_code": "EUR",
    "desk_code": "00760",
    "nb_of_dec": "2",
    "prev_amount": "315247.48",
    "prev_date": "2023-04-13",
    "record_code": "01",
  },
  "problems": [
    {
      "message": "Sum of transactions (491.25) doesn't match with difference between start amount 315247.48 and end amount 323360.23",
    },
  ],
  "transactions": [
    {
      "_1": "",
      "_2": "",
      "_3": "",
      "_4:": "",
      "_rank": "0",
      "account_nb": "01124412726",
      "amount": "-252.48",
      "bank_code": "30012",
      "currency_code": "EUR",
      "desk_code": "00760",
      "exempt_code": "1",
      "internal_code": "0029",
      "label": "INTERETS ET COMMISSIONS",
      "nb_of_dec": "2",
      "operation_code": "70",
      "operation_date": "2023-04-14",
      "record_code": "04",
      "reference": "0000000",
      "reject_code": "",
      "value_date": "2023-04-01",
    },
    {
      "_1": "",
      "_2": "",
      "_3": "",
      "_4:": "FR91ZZZ450973",
      "_rank": "1",
      "account_nb": "01124412726",
      "amount": "-11.98",
      "bank_code": "30012",
      "creditor_id": "FR91ZZZ450973",
      "creditor_id_type": "",
      "creditor_name": "AMENSAS",
      "currency_code": "EUR",
      "desk_code": "00760",
      "end2end_identification": "KP53665-AMENORDER 178674317",
      "exempt_code": "0",
      "internal_code": "0813",
      "label": "PRLV SEPA/AMENSAS",
      "mandate_identification": "KP78745-AMENFR-1                   ",
      "nb_of_dec": "2",
      "operation_code": "B1",
      "operation_date": "2023-04-14",
      "purpose": "",
      "record_code": "04",
      "reference": "",
      "reject_code": "",
      "remittance_information_1": "PAYMENT ORDER 178674317",
      "sequence_type": "RCUR",
      "value_date": "2023-04-14",
    },
    {
      "_1": "",
      "_2": "",
      "_3": "",
      "_4:": "FR18ZZZ531471",
      "_rank": "2",
      "account_nb": "01124412726",
      "amount": "-47.99",
      "bank_code": "30012",
      "creditor_id": "FR18ZZZ531471",
      "creditor_id_type": "",
      "creditor_name": "SOSH PRO",
      "currency_code": "EUR",
      "desk_code": "00760",
      "end2end_identification": "2582434",
      "exempt_code": "0",
      "internal_code": "0813",
      "label": "PRLV SEPA/SOSH PRO",
      "mandate_identification": "JNRUMLAGRANDESERRE00020211007111533",
      "nb_of_dec": "2",
      "operation_code": "B1",
      "operation_date": "2023-04-14",
      "purpose": "",
      "record_code": "04",
      "reference": "",
      "reject_code": "",
      "remittance_information_1": "FACTURE SOSHPRO 02/04/2023 F202304007806",
      "sequence_type": "RCUR",
      "value_date": "2023-04-14",
    },
    {
      "_1": "",
      "_2": "",
      "_3": "",
      "_4:": "FR78ZZY647216",
      "_rank": "3",
      "account_nb": "01124412726",
      "amount": "-84",
      "bank_code": "30012",
      "creditor_id": "FR78ZZY647216",
      "creditor_id_type": "",
      "creditor_name": "LES JOYEUX RECYCLEURS",
      "currency_code": "EUR",
      "desk_code": "00760",
      "end2end_identification": "ABONNEMENT 2023-04",
      "exempt_code": "0",
      "internal_code": "0813",
      "label": "PRLV SEPA/LES JOYEUX RECYCLEURS",
      "mandate_identification": "BOXDESJOYEUXRECYCLEURSC1091        ",
      "nb_of_dec": "2",
      "operation_code": "B1",
      "operation_date": "2023-04-14",
      "purpose": "",
      "record_code": "04",
      "reference": "",
      "reject_code": "",
      "remittance_information_1": "ABONNEMENT 2023-04",
      "sequence_type": "RCUR",
      "value_date": "2023-04-14",
    },
    {
      "_1": "",
      "_2": "",
      "_3": "",
      "_4:": "FR16ZYZ012545",
      "_rank": "4",
      "account_nb": "01124412726",
      "amount": "-94.8",
      "bank_code": "30012",
      "creditor_id": "FR16ZYZ012545",
      "creditor_id_type": "",
      "creditor_name": "ORANGE SA-ORANGE",
      "currency_code": "EUR",
      "desk_code": "00760",
      "end2end_identification": "1B966E396 C765D3864C574F",
      "exempt_code": "0",
      "internal_code": "0813",
      "label": "PRLV SEPA/ORANGE SA-ORANGE",
      "mandate_identification": "M0063144755                        ",
      "nb_of_dec": "2",
      "operation_code": "B1",
      "operation_date": "2023-04-14",
      "purpose": "",
      "record_code": "04",
      "reference": "",
      "reject_code": "",
      "remittance_information_1": "VOTRE ABONNEMENT FIBRE (FACTURE  XXXXX3963C4) - P",
      "sequence_type": "RCUR",
      "value_date": "2023-04-14",
    },
  ],
}
`;
